--- a/data_clean.ipynb
+++ b/data_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
     "from pycaret.time_series import *\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"data_eng_day.csv\")  # อ่านไฟล์ CSV\n",
+    "df = pd.read_csv(\"province/data_eng_day.csv\")  # อ่านไฟล์ CSV\n",
     "print(df.head(10))\n",
     "\n",
     "print(df.index)  # เช็คว่า timestamp เป็น index หรือไม่\n",
@@ -53,7 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1400,144 +1407,6 @@
    "outputs": [],
    "source": [
     "print(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "บันทึกไฟล์ CSV: daily_csv/export-AeroSURE-017-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-782032880420-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-jsps013-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-AeroSURE-028-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-356669080020144-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-356669080036975-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-aerosure_wifi_01-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-782032880420-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-AeroSURE-017-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-jsps013-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-AeroSURE-028-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-356669080020144-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-356669080036975-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-aerosure_wifi_01-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-jsps012-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-932208BB5525-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-0EE4AB8C3689-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-AeroSURE-030-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-jsps012-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-932208BB5525-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-0EE4AB8C3689-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-AeroSURE-030-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-jsps_wifi_mmr_01-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-pkk_ban_sai_kanun-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-AeroSURE-014-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-r202_test_wifi-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-AA1D91534459-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-aerosure_wifi_02-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-AeroSURE-022-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-67C711FE46A1-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-pkk_ban_sai_kanun-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-jsps_wifi_mmr_01-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-AeroSURE-014-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-r202_test_wifi-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-aerosure_wifi_02-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-AA1D91534459-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-AeroSURE-022-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-67C711FE46A1-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-jsps001-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-jsps018-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-pm25_eng-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-1840041777612-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-BD65A0C1CBA2-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-jsps001-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-jsps018-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-pm25_eng-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-1840041777612-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-BD65A0C1CBA2-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-AeroSURE-026-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-356669080023619-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-AeroSURE-019-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-jsps014-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-4AE939B0E248-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-AeroSURE-026-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-356669080023619-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-jsps014-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-AeroSURE-019-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-4AE939B0E248-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-BB51B17ADB17-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-AeroSURE-018-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-BB51B17ADB17-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-AeroSURE-018-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-pm_01_pmub_00-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-A9D65F26F0B9-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-r202_test_nbiot-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-jsps017-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-4EAAECB6B0E6-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-pm_01_pmub_00-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-A9D65F26F0B9-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-4EAAECB6B0E6-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-jsps017-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-r202_test_nbiot-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-pkk_cha_uat_school-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-6FFB47364AC3-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-AeroSURE-024-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-4B7B6566022D-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-jsps016-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-114BF8ABF5AB-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-783109F52161-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-6FFB47364AC3-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-pkk_cha_uat_school-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-AeroSURE-024-1h.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-4B7B6566022D-1d.csv\n",
-      "บันทึกไฟล์ CSV: daily_csv/export-783109F52161-1d.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-114BF8ABF5AB-1h.csv\n",
-      "บันทึกไฟล์ CSV: hourly_csv/export-jsps016-1h.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from pycaret.classification import *\n",
-    "import os\n",
-    "folder_path = r\"/Users/pittachiox/Desktop/pm-data\"\n",
-    "\n",
-    "# โฟลเดอร์สำหรับบันทึก CSV\n",
-    "hourly_output_folder = \"hourly_csv\"\n",
-    "daily_output_folder = \"daily_csv\"\n",
-    "\n",
-    "# สร้างโฟลเดอร์ถ้ายังไม่มี\n",
-    "os.makedirs(hourly_output_folder, exist_ok=True)\n",
-    "os.makedirs(daily_output_folder, exist_ok=True)\n",
-    "\n",
-    "# วนลูปอ่านไฟล์ Excel\n",
-    "for file_name in os.listdir(folder_path):\n",
-    "    if file_name.endswith(\".xlsx\"):\n",
-    "        file_path = os.path.join(folder_path, file_name)\n",
-    "        df = pd.read_excel(file_path)\n",
-    "\n",
-    "        # เพิ่มคอลัมน์ location\n",
-    "        df[\"location\"] = file_name\n",
-    "\n",
-    "        # แยกไฟล์ รายชั่วโมง (1h) และ รายวัน (1d)\n",
-    "        if \"1h\" in file_name.lower():\n",
-    "            csv_filename = os.path.join(\n",
-    "                hourly_output_folder, file_name.replace(\".xlsx\", \".csv\")\n",
-    "            )\n",
-    "        elif \"1d\" in file_name.lower():\n",
-    "            csv_filename = os.path.join(\n",
-    "                daily_output_folder, file_name.replace(\".xlsx\", \".csv\")\n",
-    "            )\n",
-    "        else:\n",
-    "            continue  # ถ้าไม่ใช่ไฟล์ 1h หรือ 1d ข้ามไป\n",
-    "\n",
-    "        # บันทึกไฟล์ CSV\n",
-    "        df.to_csv(csv_filename, index=False)\n",
-    "        print(f\"บันทึกไฟล์ CSV: {csv_filename}\")"
    ]
   }
  ],
