--- a/test2_kim.ipynb
+++ b/test2_kim.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -249,20 +249,32 @@
     }
    ],
    "source": [
-    "# ฟีเจอร์ที่เราจะใช้\n",
-    "features = ['humidity', 'pm_10', 'temperature']\n",
     "\n",
-    "# สร้าง future_exog โดยใช้ PeriodIndex จาก train_df\n",
-    "future_exog = pd.DataFrame(index=pd.period_range(start=train_df.index[-1] + 1, periods=7, freq='D'))\n",
+    "features = ['humidity', 'pm_10', 'temperature']  # ฟีเจอร์ที่เราจะพยากรณ์\n",
     "\n",
-    "# สร้างฟีเจอร์ Lag สำหรับแต่ละฟีเจอร์\n",
+    "\n",
+    "future_exog = pd.DataFrame(index=test_df.index+7)\n",
+    "# สร้างโมเดล ARIMA สำหรับแต่ละฟีเจอร์\n",
     "for feature in features:\n",
-    "    # สร้าง Lag 7 วันจากข้อมูลที่ผ่านมา\n",
-    "    future_exog[feature] = train_df[feature].shift(7).iloc[-7:].values\n",
+    "    # เรียก setup() โดยใช้ train_df\n",
+    "    exp = setup(data=train_df[feature],fh=7, session_id=123, fold_strategy='expanding',seasonal_period=12, use_gpu=True)\n",
+    "\n",
+    "    \n",
+    "    # สร้างโมเดล ARIMA\n",
+    "    model = create_model('arima')\n",
+    "    tune = tune_model(model,optimize= \"R2\", n_iter=10)\n",
+    "    print(predict_model(model))\n",
+    "    # best = finalize_model(model)\n",
+    "    # print(best,X=train_df)\n",
+    "    # ทำนายอนาคต\n",
+    "    future_predictions = predict_model(tune, fh=len(test_df))\n",
+    "    \n",
+    "    # บันทึกผลลัพธ์ลงใน future_exog\n",
+    "    future_exog[feature] = future_predictions['y_pred'].values\n",
     "\n",
     "# แสดงผลลัพธ์\n",
     "print(future_exog)\n",
-    "print(test_df)"
+    "\n"
    ]
   },
   {
