--- a/test3_kim.ipynb
+++ b/test3_kim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -160,15 +160,22 @@
     "from pycaret.time_series import *\n",
     "import pandas as pd\n",
     "\n",
+    "# อ่านข้อมูลจากไฟล์ CSV\n",
     "df = pd.read_csv(\"province/data_eng_day.csv\", parse_dates=[\"timestamp\"], index_col=\"timestamp\")\n",
-    "# df.index = df.index.normalize()\n",
     "df = df.drop(columns=[\"Unnamed: 0\"])\n",
     "\n",
+    "# นับจำนวน index ที่ซ้ำกันและแสดงค่าที่ซ้ำ\n",
     "print(df.index.duplicated().sum())  # นับจำนวน index ที่ซ้ำกัน\n",
     "print(df.index[df.index.duplicated()])  # แสดงค่าที่ซ้ำ\n",
+    "\n",
+    "# ลบ index ที่ซ้ำกันและตั้งค่าความถี่เป็นรายวัน\n",
     "df = df[~df.index.duplicated(keep=\"last\")]\n",
     "df = df.asfreq(\"D\")  # ตั้งค่าความถี่เป็นรายวัน\n",
     "df = df.interpolate()\n",
+    "\n",
+    "# กำหนดเกณฑ์สำหรับค่า pm_10 และ humidity\n",
+    "df = df[(df['pm_10'] >= 0) & (df['pm_10'] <= 80)]\n",
+    "df = df[(df['humidity'] >= 0) & (df['humidity'] <= 100)]\n",
     "\n",
     "# ตรวจสอบข้อมูลอีกครั้ง\n",
     "print(\"จำนวน index ที่ซ้ำกันหลังจากแก้ไข:\", df.index.duplicated().sum())\n",
@@ -176,17 +183,17 @@
     "\n",
     "# แปลงคอลัมน์ timestamp ให้เป็น DatetimeIndex หากยังไม่ได้ทำ\n",
     "df.index = pd.to_datetime(df.index)\n",
+    "\n",
     "# ตรวจสอบให้แน่ใจว่าไม่มีคอลัมน์ที่ไม่ต้องการ\n",
     "df = df[['pm_2_5', 'humidity', 'pm_10', 'temperature']]  # ใช้เฉพาะคอลัมน์ที่ต้องการ\n",
     "\n",
-    "# ลองเรียกใช้งาน setup อีกครั้ง\n",
-    "train_size = int(len(df))-7\n",
+    "# แบ่งข้อมูลเป็น train set และ test set\n",
+    "train_size = int(len(df)) - 7\n",
     "train_df = df.iloc[:train_size]  # ใช้ข้อมูลก่อนหน้าทั้งหมดเป็น train set\n",
     "test_df = df.iloc[train_size:]  \n",
     "train_df.index = train_df.index.to_period(\"D\")\n",
     "test_df.index = test_df.index.to_period(\"D\")\n",
-    "print(len(train_df), len(test_df))\n",
-    "df"
+    "print(len(train_df),"
    ]
   },
   {
