--- a/test3_kim.ipynb
+++ b/test3_kim.ipynb
@@ -173,9 +173,11 @@
     "df = df.asfreq(\"D\")  # ตั้งค่าความถี่เป็นรายวัน\n",
     "df = df.interpolate()\n",
     "\n",
+    "\n",
     "# กำหนดเกณฑ์สำหรับค่า pm_10 และ humidity\n",
     "df = df[(df['pm_10'] >= 0) & (df['pm_10'] <= 80)]\n",
     "df = df[(df['humidity'] >= 0) & (df['humidity'] <= 100)]\n",
+    "\n",
     "\n",
     "# ตรวจสอบข้อมูลอีกครั้ง\n",
     "print(\"จำนวน index ที่ซ้ำกันหลังจากแก้ไข:\", df.index.duplicated().sum())\n",
@@ -193,7 +195,32 @@
     "test_df = df.iloc[train_size:]  \n",
     "train_df.index = train_df.index.to_period(\"D\")\n",
     "test_df.index = test_df.index.to_period(\"D\")\n",
-    "print(len(train_df),"
+    "print(len(train_df), len(test_df))\n",
+    "\n",
+    "# ตั้งค่า PyCaret\n",
+    "exp = TSForecastingExperiment()\n",
+    "exp.setup(data=train_df, target='pm_10', session_id=123, transform_target=True)\n",
+    "\n",
+    "# สร้างโมเดล ARIMA\n",
+    "model = exp.create_model('arima')\n",
+    "\n",
+    "# ทำนายค่าในอนาคต 7 วัน\n",
+    "forecast = exp.predict_model(model, fh=7)\n",
+    "print(\"Forecast:\")\n",
+    "print(forecast)\n",
+    "\n",
+    "# แสดงกราฟของค่าจริงและค่าที่ทำนาย\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(df.index, df['pm_10'], label='Actual')\n",
+    "plt.plot(test_df.index, forecast, label='Forecast', marker='o')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('pm_10')\n",
+    "plt.title('Actual vs Forecasted pm_10')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
