--- a/test3_pitta.ipynb
+++ b/test3_pitta.ipynb
@@ -446,7 +446,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "แถวที่มี index 0 ถึง 4 ถูกลบออกและบันทึกลง cleaned_data.csv แล้ว\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# โหลดข้อมูลจากไฟล์ CSV\n",
+    "file_path = \"cleaned_data.csv\"  # แก้ไขเป็น path ที่ถูกต้องถ้าไฟล์อยู่ที่อื่น\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# ลบแถวที่มี index 0 ถึง 4\n",
+    "df.drop(index=[0, 1, 2, 3, 4], inplace=True)\n",
+    "\n",
+    "# บันทึกไฟล์ใหม่\n",
+    "df.to_csv(\"cleaned_data.csv\", index=False)\n",
+    "\n",
+    "print(\"แถวที่มี index 0 ถึง 4 ถูกลบออกและบันทึกลง cleaned_data.csv แล้ว\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "แถวที่มี timestamp ในช่วงที่ต้องการลบถูกลบออกและบันทึกลง cleaned_data.csv แล้ว\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# โหลดข้อมูลจากไฟล์ CSV\n",
+    "file_path = \"cleaned_data.csv\"  # แก้ไขเป็น path ที่ถูกต้องถ้าไฟล์อยู่ที่อื่น\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# ลบแถวที่มี timestamp ในช่วงที่ต้องการลบ\n",
+    "timestamps_to_drop = [\n",
+    "    '2025-02-11 00:00:00.000',\n",
+    "    '2025-02-11 01:00:00.000',\n",
+    "    '2025-02-11 02:00:00.000',\n",
+    "    '2025-02-11 03:00:00.000',\n",
+    "    '2025-02-11 04:00:00.000',\n",
+    "    '2025-02-11 05:00:00.000',\n",
+    "    '2025-02-11 06:00:00.000',\n",
+    "    '2025-02-11 07:00:00.000',\n",
+    "    '2025-02-11 08:00:00.000',\n",
+    "    '2025-02-11 09:00:00.000',\n",
+    "    '2025-02-11 10:00:00.000',\n",
+    "    '2025-02-11 11:00:00.000',\n",
+    "    '2025-02-11 11:12:42.658'\n",
+    "]\n",
+    "\n",
+    "df = df[~df['timestamp'].isin(timestamps_to_drop)]\n",
+    "\n",
+    "# บันทึกไฟล์ใหม่\n",
+    "df.to_csv(\"cleaned_data.csv\", index=False)\n",
+    "\n",
+    "print(\"แถวที่มี timestamp ในช่วงที่ต้องการลบถูกลบออกและบันทึกลง cleaned_data.csv แล้ว\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -454,18 +528,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 24843 entries, 0 to 24842\n",
+      "RangeIndex: 24820 entries, 0 to 24819\n",
       "Data columns (total 8 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   Unnamed: 0   24843 non-null  int64  \n",
-      " 1   timestamp    24843 non-null  object \n",
-      " 2   timezone     24843 non-null  object \n",
-      " 3   humidity     24843 non-null  float64\n",
-      " 4   pm_2_5       24843 non-null  float64\n",
-      " 5   pm_2_5_sp    24843 non-null  float64\n",
-      " 6   temperature  24843 non-null  float64\n",
-      " 7   location     24843 non-null  object \n",
+      " 0   Unnamed: 0   24820 non-null  int64  \n",
+      " 1   timestamp    24820 non-null  object \n",
+      " 2   timezone     24820 non-null  object \n",
+      " 3   humidity     24820 non-null  float64\n",
+      " 4   pm_2_5       24820 non-null  float64\n",
+      " 5   pm_2_5_sp    24820 non-null  float64\n",
+      " 6   temperature  24820 non-null  float64\n",
+      " 7   location     24820 non-null  object \n",
       "dtypes: float64(4), int64(1), object(3)\n",
       "memory usage: 1.5+ MB\n"
      ]
@@ -475,7 +549,7 @@
     "import pandas as pd\n",
     "\n",
     "# โหลดข้อมูลจากไฟล์ CSV\n",
-    "file_path = \"cleaned_data.csv\"  # แก้ไขเป็น path ที่ถูกต้องถ้าไฟล์อยู่ที่อื่น\n",
+    "file_path = \"cleaned_data.csv\"  \n",
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# แสดงข้อมูลของ DataFrame\n",
